<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relativeLayout2"
    android:background="@drawable/background_brown"
    tools:context=".Staff_App.Activities.ManageStaffActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="580dp"
            tools:layout_editor_absoluteY="698dp" />

        <CheckBox
            android:id="@+id/milkOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="milk: Full Cream, Skim, Almond, Soy"
            android:textSize="20sp"

            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="477dp" />

        <CheckBox
            android:id="@+id/sugarOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sugar: Sugar, Sweetener"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="424dp" />

        <CheckBox
            android:id="@+id/decafOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="decaf: Decaffeinates Beverage"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="363dp" />

        <CheckBox
            android:id="@+id/extrasOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="extras: Vanilla, Caramel, Chocolate, Cream"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="537dp" />

        <CheckBox
            android:id="@+id/frappeOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="frappe: Turns beverage into a frappe"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51"
            tools:layout_editor_absoluteX="34dp" />

        <CheckBox
            android:id="@+id/heatingOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="heated: Allows for item to be heated"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="646dp" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"
            android:hint="title"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="394dp"
            tools:layout_editor_absoluteY="559dp" />

        <EditText
            android:id="@+id/editTextShortDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"
            android:hint="@string/shortdesc_optional"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="420dp"
            tools:layout_editor_absoluteY="446dp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="568dp"
            tools:layout_editor_absoluteY="353dp" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time_minutes"
            android:inputType="number"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="172dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/item_title"
            android:textColor="#69989E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/menuBarInsert"
            tools:layout_editor_absoluteX="34dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/short_description"
            android:textColor="#69989E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="34dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/item_price"
            android:textColor="#69989E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="34dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/preparation_time"
            android:textColor="#69989E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="35dp" />

        <TextView
            android:id="@+id/optionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Allow Beverage Options:"
            android:textColor="#69989E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="35dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/menuBarInsert"
            android:name="com.example.beverage_booker_staff.Staff_App.Activities.StaffMenuBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>